cuda/ex7/logs/logs_main/slurm.37100453.gpu010.err
Traceback (most recent call last):
  File "main.py", line 4, in <module>
    import utils as utils
  File "/scratch/bbc33/pycuda/cuda/ex7/utils.py", line 28
    def print_gpu_info():
    ^
IndentationError: expected an indented block
